--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -7,7 +7,7 @@
     android:background="@color/bc_gray"
     android:orientation="vertical"
     android:padding="8dp"
-    tools:context=".AddTaskFragment">
+    tools:context=".presentation.AddTaskFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -62,7 +62,7 @@
         android:paddingStart="16dp"
         android:layout_height="match_parent">
         <EditText
-            android:id="@+id/et_note_title"
+            android:id="@+id/et_task_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -70,15 +70,15 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:cursorVisible="false"
-            android:hint="Enter title your note!"/>
+            android:hint="Enter title your task!"/>
         <EditText
-            android:id="@+id/et_note"
+            android:id="@+id/et_task"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null"
             android:textSize="16sp"
             android:gravity="top"
             android:cursorVisible="false"
-            android:hint="Enter your note!" />
+            android:hint="Enter your task!" />
     </LinearLayout>
 </LinearLayout>
