--- a/app/src/main/res/layout/fragment_list_task.xml
+++ b/app/src/main/res/layout/fragment_list_task.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bc_gray"
-    tools:context=".ListTaskFragment">
+    tools:context=".presentation.ListTaskFragment">
 
     <TextView
         android:id="@+id/txt_title"
