--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    tools:context=".SplashFragment">
+    tools:context=".presentation.SplashFragment">
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_view"
         app:lottie_autoPlay="true"
